worked on framework to build particles

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/kochie/particle-sim-v2/issues"
   },
   "homepage": "https://github.com/kochie/particle-sim-v2#readme",
-  "dependencies": {},
+  "dependencies": {
+    "uglify-js": "^2.7.5"
+  },
   "devDependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
@@ -25,9 +27,11 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.1.1",
+    "gulp-inject": "^4.1.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
+    "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.1.1",
     "gulp-uglify": "^2.0.0",
