--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
-  "name": "particle-sim-v2",
-  "version": "1.0.0",
-  "description": "particle simulation app build with es6 and threejs.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/kochie/particle-sim-v2.git"
-  },
-  "author": "Robert Koch",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kochie/particle-sim-v2/issues"
-  },
-  "homepage": "https://github.com/kochie/particle-sim-v2#readme",
-  "dependencies": {
-    "uglify-js": "^2.7.5"
-  },
-  "devDependencies": {
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cache": "^0.4.5",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-inject": "^4.1.0",
-    "gulp-jshint": "^2.0.4",
-    "gulp-livereload": "^3.8.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-order": "^1.1.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-ruby-sass": "^2.1.1",
-    "gulp-uglify": "^2.0.0",
-    "jshint": "^2.9.4"
-  }
+	"name": "particle-sim-v2",
+	"version": "1.0.0",
+	"description": "particle simulation app build with es6 and threejs.",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "webpack-dev-server --content-base dist"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/kochie/particle-sim-v2.git"
+	},
+	"author": "Robert Koch",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/kochie/particle-sim-v2/issues"
+	},
+	"homepage": "https://github.com/kochie/particle-sim-v2#readme",
+	"dependencies": {
+		"dat.gui": "^0.6.1",
+		"stats.js": "^0.17.0",
+		"three": "^0.88.0"
+	},
+	"devDependencies": {
+		"html-webpack-plugin": "^2.30.1",
+		"uglify-js": "^2.7.5",
+		"webpack-dev-server": "^2.9.5",
+		"npm-install-webpack-plugin": "^4.0.5",
+		"prettier": "^1.8.2",
+		"uglifyjs-webpack-plugin": "^1.1.1",
+		"webpack": "^3.8.1"
+	},
+	"prettier": {
+		"tabWidth": 4,
+		"useTabs": true
+	}
 }
