--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-	"name": "particlez",
-	"version": "1.0.0",
-	"description": "particle simulation app build with es6 and threejs.",
-	"main": "index.js",
-	"scripts": {
-		"test": "jest",
-		"lint": "eslint ./src --fix",
-		"dev": "parcel ./src/index.html",
-		"start": "webpack-dev-server --content-base dist"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@github.com/kochie/particle-sim-v2.git"
-	},
-	"author": "Robert Koch",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/kochie/particle-sim-v2/issues"
-	},
-	"homepage": "https://github.com/kochie/particle-sim-v2#readme",
-	"dependencies": {
-		"autoprefixer": "^8.6.3",
-		"babel-preset-env": "^1.7.0",
-		"dat.gui": "^0.7.2",
-		"postcss-modules": "^1.1.0",
-		"stats.js": "^0.17.0",
-		"three": "^0.93.0"
-	},
-	"devDependencies": {
-		"eslint": "^4.19.1",
-		"eslint-config-airbnb-base": "^13.0.0",
-		"eslint-plugin-import": "^2.13.0",
-		"html-webpack-plugin": "^2.30.1",
-		"jest": "^23.1.0",
-		"node-sass": "^4.9.0",
-		"npm-install-webpack-plugin": "^4.0.5",
-		"parcel-bundler": "^1.9.2",
-		"prettier": "^1.8.2",
-		"uglify-js": "^2.7.5",
-		"uglifyjs-webpack-plugin": "^1.1.1",
-		"webpack": "^3.8.1",
-		"webpack-dev-server": "^2.9.5"
-	},
-	"prettier": {
-		"tabWidth": 4,
-		"useTabs": true
-	}
+  "name": "particlez",
+  "version": "1.0.0",
+  "description": "particle simulation app build with es6 and threejs.",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "lint": "eslint ./src --fix",
+    "dev": "parcel ./src/index.html",
+    "build": "rm -rf ./dist && parcel build ./src/index.html",
+    "deploy": "now && now alias",
+    "start": "webpack-dev-server --content-base dist",
+    "validate": "npm ls"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/kochie/particle-sim-v2.git"
+  },
+  "author": "Robert Koch",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/kochie/particle-sim-v2/issues"
+  },
+  "homepage": "https://github.com/kochie/particle-sim-v2#readme",
+  "dependencies": {
+    "dat.gui": "^0.7.2",
+    "stats.js": "^0.17.0",
+    "three": "^0.93.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^8.6.3",
+    "babel": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "jest": "^23.1.0",
+    "node-sass": "^4.9.0",
+    "parcel-bundler": "^1.9.2",
+    "postcss-modules": "^1.1.0"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "useTabs": true
+  },
+  "pre-commit": [
+    "lint",
+    "validate",
+    "test"
+  ]
 }
