--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "rm -rf ./dist && parcel build ./src/index.html",
     "deploy": "now && now alias",
     "start": "webpack-dev-server --content-base dist",
-    "validate": "npm ls"
+    "validate": "npm ls",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
