--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "dependencies": {
     "dat.gui": "^0.7.2",
     "moment": "^2.22.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "serve": "^9.1.0",
     "stats.js": "^0.17.0",
     "three": "^0.93.0"
@@ -34,15 +38,22 @@
     "autoprefixer": "^8.6.3",
     "babel": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "jest": "^23.1.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "now": "^11.2.4",
     "parcel-bundler": "^1.9.2",
-    "postcss-modules": "^1.1.0"
+    "postcss-modules": "^1.1.0",
+    "react-test-renderer": "^16.4.1",
+    "typescript": "^2.9.2"
   },
   "prettier": {
     "tabWidth": 4,
