--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --coverage",
     "lint": "eslint ./src --fix",
     "dev": "parcel ./src/index.html",
-    "build": "rm -rf ./dist && parcel build ./src/index.html",
+    "build": "rm -rf ./public && parcel build ./src/index.html",
     "deploy": "now --token $NOW_TOKEN && now alias --token $NOW_TOKEN",
     "validate": "npm ls",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
@@ -49,7 +49,7 @@
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.1.0",
     "node-sass": "^4.9.2",
-    "now": "^11.2.4",
+    "now": "^11.2.9",
     "parcel-bundler": "^1.9.2",
     "postcss-modules": "^1.1.0",
     "react-test-renderer": "^16.4.1",
