--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "redux": "^4.0.0",
     "serve": "^9.1.0",
     "stats.js": "^0.17.0",
-    "three": "^0.93.0"
+    "three": "^0.102.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.3",
     "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.1",
-    "eslint": "^4.19.1",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-react": "^1.1.7",
@@ -48,9 +49,9 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.1.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.11.0",
     "now": "^11.2.9",
-    "parcel-bundler": "^1.9.2",
+    "parcel-bundler": "^1.12.3",
     "postcss-modules": "^1.1.0",
     "react-test-renderer": "^16.4.1",
     "typescript": "^2.9.2"
