--- a/package.json
+++ b/package.json
@@ -30,31 +30,34 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "serve": "^9.1.0",
     "stats.js": "^0.17.0",
     "three": "^0.102.1"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.2",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/stats.js": "^0.17.0",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
     "autoprefixer": "^8.6.3",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "coveralls": "^3.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "jest": "^23.1.0",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.5.0",
     "node-sass": "^4.11.0",
     "now": "^11.2.9",
     "parcel-bundler": "^1.12.3",
     "postcss-modules": "^1.1.0",
+    "prettier": "^1.16.4",
+    "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.4.1",
-    "typescript": "^2.9.2"
+    "typescript": "^3.4.1"
   },
   "prettier": {
     "tabWidth": 4,
