Updated test for typescript

--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
     "three": "^0.102.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/dat.gui": "^0.7.2",
+    "@types/jest": "^24.0.11",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/stats.js": "^0.17.0",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "autoprefixer": "^8.6.3",
+    "babel-jest": "^24.7.0",
     "coveralls": "^3.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.0.0",
@@ -49,7 +55,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.5.0",
+    "jest": "^24.7.0",
     "node-sass": "^4.11.0",
     "now": "^11.2.9",
     "parcel-bundler": "^1.12.3",
