--- a/now.json
+++ b/now.json
@@ -1,5 +1,9 @@
 {
-	"type": "static",
+	"version": 2,
+	"builds": [{ 
+		"src": "package.json", 
+		"use": "@now/static-build" 
+	}],
 	"name": "particles",
 	"alias": [
 		"3body.now.sh"
