--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
         "lib": [
             "dom",
             "dom.iterable",
-            "es6"
-        ]
+            "es6",
+            "webworker"
+        ],
+        "downlevelIteration": true,
     }
 }
