--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "prettier": "^1.16.4",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.4.1",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "husky": "^2.1.0"
   },
   "prettier": {
     "useTabs": true,
@@ -75,9 +76,10 @@
     "semi": false,
     "singleQuote": true
   },
-  "pre-commit": [
-    "lint",
-    "validate",
-    "test"
-  ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm test"
+    }
+  }
 }
