--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "deploy": "now --token $NOW_TOKEN --target production",
     "validate": "npm ls",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
-    "benchmark": "benchtop"
+    "benchmark": "benchtop",
+    "prettier": "prettier src/**/*.ts --write",
+    "pre-commit": "npm run prettier && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -58,7 +60,9 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.12.4",
+    "husky": "^2.1.0",
     "jest": "^24.7.0",
+    "jsdom": "^15.0.0",
     "node-sass": "^4.11.0",
     "now": "^15.0.1",
     "parcel-bundler": "^1.12.3",
@@ -66,8 +70,7 @@
     "prettier": "^1.16.4",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "^16.4.1",
-    "typescript": "^3.4.1",
-    "husky": "^2.1.0"
+    "typescript": "^3.4.1"
   },
   "prettier": {
     "useTabs": true,
@@ -78,7 +81,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
+      "pre-commit": "npm run pre-commit",
       "pre-push": "npm test"
     }
   }
