--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "particle simulation app build with es6 and threejs.",
   "main": "index.js",
   "scripts": {
-    "start": "serve ./dist --single",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "test": "jest --coverage",
     "lint": "eslint ./src/**/*.ts --fix",
-    "dev": "parcel ./src/index.html",
-    "now-build": "parcel build ./src/index.html",
     "deploy": "now --token $NOW_TOKEN --target production",
     "validate": "npm ls",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
@@ -27,49 +27,30 @@
   },
   "homepage": "https://github.com/kochie/particle-sim-v2#readme",
   "dependencies": {
-    "dat.gui": "^0.7.2",
-    "moment": "^2.22.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "@zeit/next-workers": "^1.0.0",
+    "dat.gui": "^0.7.6",
+    "next": "^9.3.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-three-fiber": "^4.0.20",
     "stats.js": "^0.17.0",
-    "three": "^0.104.0",
-    "uuid": "^3.3.2"
+    "three": "^0.114.0",
+    "uuid": "^3.3.2",
+    "worker-loader": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
     "@types/dat.gui": "^0.7.2",
     "@types/jest": "^24.0.11",
+    "@types/node": "^13.9.1",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/stats.js": "^0.17.0",
     "@types/uuid": "^3.4.4",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "autoprefixer": "^8.6.3",
-    "babel-jest": "^24.7.0",
     "coveralls": "^3.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "husky": "^2.1.0",
+    "husky": "^4.2.3",
     "jest": "^24.7.0",
-    "jsdom": "^15.0.0",
-    "node-sass": "^4.11.0",
-    "now": "^15.0.1",
-    "parcel-bundler": "^1.12.3",
-    "postcss-modules": "^1.1.0",
     "prettier": "^1.16.4",
-    "prettier-eslint": "^8.8.2",
-    "react-test-renderer": "^16.4.1",
     "typescript": "^3.4.1"
   },
   "prettier": {
